// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: BUSL-1.1

syntax = "proto3";

package worker.health.v1;

import "google/protobuf/wrappers.proto";

option go_package = "github.com/hashicorp/boundary/internal/gen/worker/health;health";

message HealthInfo {
  string state = 1;
  google.protobuf.UInt32Value active_session_count = 2 [json_name = "active_connection_count"];
  map<string, uint32> session_connections = 3 [json_name = "session_connections"];
  string upstream_connection_state = 4 [json_name = "upstream_connection_state"];
}
